FinalProject/GpMessages/320957104113400
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Sunday, October 15, 2023 9:07:04 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    .is_integer("48"+u"001950100")
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Sunday, October 15, 2023 9:07:05 PM (Elapsed Time: 1.20 seconds)</msg></messages>